--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # Ignore specified file
 test.txt
+Business_Proposal.pdf
+Some_New_Doc.pdf
+US_Declaration.pdf
+MY_BRAND_NEW.pdf
+
+#Ignore virtual environment directories
+venv/
