Vocabulary and Matching Spacy Basics

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Business_Proposal.pdf
 Some_New_Doc.pdf
 US_Declaration.pdf
 MY_BRAND_NEW.pdf
+reaganomics.txt
 
 #Ignore virtual environment directories
 venv/
